--- a/index.html
+++ b/index.html
@@ -9,5 +9,6 @@
 <body>
     <h1> Hello Its TypeSCript</h1>
     <script src="./output/script.js"></script>
+    <script src="./output/extra.js"></script>
 </body>
 </html>
